# libxnd

./: .appveyor.yml  .appveyor_conda.yml  .gitignore  .gitmodules  .maybe_deploy.sh  .travis.yml  AUTHORS.txt  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  Makefile.in  Makefile.vc  README.rst  README.txt  appveyor.yml  config.h.in  configure  configure.ac  environment.yml  install.sh  setup.py  xnd.c  xnd.h
.conda/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
.conda/libxnd/: bld.bat  build.sh  meta.yaml
.conda/xnd/: bld.bat  build.sh  meta.yaml
doc/: Makefile  conf.py  contents.rst
doc/_static/: copybutton.js
doc/libxnd/: conf.py  data-structures.rst  functions.rst  index.rst
doc/releases/: index.rst  v0.2.0b1.rst
doc/xnd/: align-pack.rst  buffer-protocol.rst  conf.py  index.rst  quickstart.rst  types.rst
docs/examples/: vararray.py
libplasma/: README.md  plasma.cc  plasma.h
libxnd/: Makefile  Makefile.in  Makefile.vc  bitmaps.c  bounds.c  contrib.h  copy.c  equal.c  identical.c  inline.h  overflow.h  shape.c  split.c  xnd.c  xnd.h  xndp.c  xndp.h
libxnd/.objs/: README.txt
libxnd/contrib/: bfloat16.h
libxnd/cuda/: cuda_memory.cu  cuda_memory.h
libxnd/tests/: Makefile.in  Makefile.vc  README.txt  runtest.c  test.h  test_fixed.c  test_var.c
notebooks/: python-tutorial.ipynb
python/: _xnd.c  randvalue.py  support.py  test_xnd.py  xnd.py  xnd_randvalue.py  xnd_support.py
python/pyxnd/: _pyxnd.py
python/tests/: test_xnd.py  vararray.py  xnd.py
python/xnd/: __init__.py  _version.py  _xnd.c  compat.h  docstrings.h  pyxnd.h  util.h
python/xnd/contrib/: pretty.py
ruby/: CONTRIBUTING.md  README.md  Rakefile  xnd.gemspec
ruby/ext/ruby_xnd/: .gitignore  extconf.rb  float_pack_unpack.c  float_pack_unpack.h  gc_guard.c  gc_guard.h  memory_block_object.c  memory_block_object.h  ruby_xnd.c  ruby_xnd.h  ruby_xnd_internal.h  util.c  util.h
ruby/ext/ruby_xnd/include/: xnd.h
ruby/lib/: xnd.rb
ruby/lib/xnd/: monkeys.rb  version.rb
ruby/spec/: debug_spec.rb  gc_guard_spec.rb  leakcheck.rb  spec_helper.rb  type_inference_spec.rb  xnd_spec.rb
ruby/test/: debug_test.rb  gc_guard_test.rb  leaktest.rb  test_helper.rb  test_xnd.rb
tests/: runtest.c  test.h  test_fixed.c  test_var.c  test_vararray.c
vcbuild/: INSTALL.txt  README.txt  runtest32.bat  runtest64.bat  vcbuild32.bat  vcbuild64.bat  vcclean.bat  vcdistclean.bat
